# data-platform-runbook

./: .gitignore  CHANGELOG.md  README.md  example_raw_data.csv  workflow_settings.yaml
.github/workflows/: deploy-dataform.yml  deploy-infra.yml  deploy-services.yml
dataform/: dataform.json
dataform/definitions/assertions/: value_is_positive.sqlx
dataform/definitions/bronze/: example_raw_data.sqlx
dataform/definitions/gold/: gld_aggregated.sqlx
definitions/assertions/: assert_positive_values.sqlx
definitions/silver/: slv_cleaned.sqlx
docs/: ATELIER_01_ARCHITECTURE.md  ATELIER_02_DONNEES.md  SLOs.md
docs/ADRs/: 001-ingestion-cloud-run.md  002-orchestration-workflows.md
docs/runbooks/: README.md  cloud-run-errors.md  dataform-failure.md  dlq-overflow.md  dlq.md  quarantine-overflow.md  quarantine.md
docs/strategic/: blueprint.md
env/: config.dev.yaml  config.prod.yaml
schemas/bronze/: example_raw_data.yaml
src/ingestion/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt  validator.py
src/ingestion/tests/: conftest.py  mocks.py  test_main.py  test_validator.py
terraform/: main.tf  outputs.tf  variables.tf
terraform/modules/bigquery/: main.tf  outputs.tf  variables.tf
terraform/modules/dataform/: main.tf
terraform/modules/dataplex/: main.tf  variables.tf
terraform/modules/ingestion/: main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: main.tf
terraform/modules/orchestration/: main.tf  variables.tf
terraform/modules/security/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  (+2 more)
